--- a/CSF1Homework/CSF1Homework.csproj
+++ b/CSF1Homework/CSF1Homework.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CSF1Homework.FruitLoop2</StartupObject>
+    <StartupObject>CSF1Homework.MadLib</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="FruitLoop1.cs" />
     <Compile Include="FruitLoop2.cs" />
+    <Compile Include="MadLib.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
