--- a/CSF1Homework/CSF1Homework.csproj
+++ b/CSF1Homework/CSF1Homework.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CSF1Homework.Grades</StartupObject>
+    <StartupObject>CSF1Homework.InterestCalculator</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,6 +50,7 @@
     <Compile Include="FruitLoop1.cs" />
     <Compile Include="FruitLoop2.cs" />
     <Compile Include="Grades.cs" />
+    <Compile Include="InterestCalculator.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="MadLib.cs" />
     <Compile Include="Powers.cs" />
