--- a/CSF1Homework/CSF1Homework.csproj
+++ b/CSF1Homework/CSF1Homework.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CSF1Homework.InterestCalculator</StartupObject>
+    <StartupObject>CSF1Homework.Fizzbuzz</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ATM.cs" />
+    <Compile Include="Fizzbuzz.cs" />
     <Compile Include="FruitLoop1.cs" />
     <Compile Include="FruitLoop2.cs" />
     <Compile Include="Grades.cs" />
